remove h1 from html

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <title>Grace Shopper</title>
 </head>
 <body>
-  <h1>Welcome</h1>
-  <div id='root'>Loading...</div>
+  <div id='root'>Working on it...</div>
 </body>
 </html>
