--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <script src="./bundle.js" defer></script>
+  <script src="/bundle.js" defer></script>
   <title>Grace Shopper</title>
 </head>
 <body>
